# Maze_a_asterisk

./: .gitignore  pyproject.toml
src/maze_a_asterisk/: main.py
src/maze_a_asterisk/algorithm/: a_star_path_finder.py
src/maze_a_asterisk/game_logic/: game.py  generator.py  maze_game.py
src/maze_a_asterisk/ui/: menu.py
src/maze_a_asterisk/utils/: gift_loader.py
src/maze_a_asterisk/view/: designer.py  display.py
