[project]
name = "maze-a-asterisk"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel-Rivera-G",email = "U22222056@utp.edu.pe"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "maze_a_asterisk", from = "src"}]

[tool.poetry.scripts]
dev = "maze_a_asterisk.main:main"
start = "maze_a_asterisk.main:main"
main = "maze_a_asterisk.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
